force-app/main/default/objects/CampaignMember/fields/AccompagnantVenu__c.field-meta.xml
<CustomField>
    <fullName>AccompagnantVenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accompagnant Venu ?</label>
    <type>Checkbox</type>
</CustomField>