force-app/main/default/objects/CampaignMember/fields/EmailAccompagnant__c.field-meta.xml
<CustomField>
    <fullName>EmailAccompagnant__c</fullName>
    <label>Email Accompagnant</label>
    <type>Email</type>
</CustomField>