force-app/main/default/objects/CampaignMember/fields/Est_accompagne__c.field-meta.xml
<CustomField>
    <fullName>Est_accompagne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est accompagné</label>
    <type>Checkbox</type>
</CustomField>