force-app/main/default/objects/CampaignMember/fields/EstVenu__c.field-meta.xml
<CustomField>
    <fullName>EstVenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est venu ?</label>
    <type>Checkbox</type>
</CustomField>