force-app/main/default/objects/CampaignMember/fields/IsAccompanied__c.field-meta.xml
<CustomField>
    <fullName>IsAccompanied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etre Accompagner</label>
    <type>Checkbox</type>
</CustomField>