force-app/main/default/objects/CampaignMember/fields/NomAccompagnant__c.field-meta.xml
<CustomField>
    <fullName>NomAccompagnant__c</fullName>
    <label>Nom Accompagnant</label>
    <length>250</length>
    <type>Text</type>
</CustomField>