force-app/main/default/objects/CampaignMember/fields/NumberOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParticipants__c</fullName>
    <formula>IF(IsAccompanied__c = true, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>