force-app/main/default/objects/CampaignMember/fields/PrenomAccompagnant__c.field-meta.xml
<CustomField>
    <fullName>PrenomAccompagnant__c</fullName>
    <label>Prénom Accompagnant</label>
    <length>250</length>
    <type>Text</type>
</CustomField>