force-app/main/default/objects/CampaignMember/fields/TECH_CodePaysContact__c.field-meta.xml
<CustomField>
    <fullName>TECH_CodePaysContact__c</fullName>
    <formula>Contact.CodePaysContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CodePaysContact</label>
    <type>Text</type>
</CustomField>