force-app/main/default/objects/CampaignMember/fields/TECH_IdMonCompteContact__c.field-meta.xml
<CustomField>
    <fullName>TECH_IdMonCompteContact__c</fullName>
    <formula>Contact.IdMonCompteContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IdMonCompteContact</label>
    <type>Text</type>
</CustomField>